--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,32 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import { Image } from 'astro:assets';
+import logo from '../assets/logo.jpg';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import { Instagram, Facebook } from "simple-icons-astro";
 ---
 
 <Layout>
-	<Welcome />
+	<div class="flex flex-col items-center justify-center h-dvh p-6 gap-6 text-center">
+		<div>
+			<Image class="w-24 h-24 rounded-2xl overflow-hidden mb-4 mx-auto" src={logo} alt="The Dragon's Last Wish 🐉🔥" />
+			<h1 class="sarun sm:text-2xl text-xl text-[#963743] mb-2">กิจกรรมพบปะสายรหัส ครั้งที่ 10</h1>
+			<p class="text-sm sm:text-base">🌩 IT Sairahut 10 | The Dragon's Last Wish 🐉🔥</p>
+		</div>
+		<div class="flex items-center flex-col">
+			<p>ขณะนี้กิจกรรมพบปะสายรหัส ครั้งที่ 10 สิ้นสุดแล้ว</p>
+			<p>ขอบคุณทุกท่านที่สนใจ และผู้ที่เข้าร่วมกิจกรรม</p>
+		</div>
+		<div>
+			<p class="sarun text-xl text-[#963743] mb-2">ติดตามข้อมูลข่าวสาร</p>
+			<div class="flex items-center justify-center gap-6">
+				<a class="hover:text-[#963743]" href="https://www.instagram.com/sairahut_itkmitl/" target="_blank" rel="noopener noreferrer">
+					<Instagram />
+				</a>
+				<a class="hover:text-[#963743]" href="https://www.facebook.com/profile.php?id=100094422583248" target="_blank" rel="noopener noreferrer">
+					<Facebook />
+				</a>
+			</div>
+		</div>
+	</div>
 </Layout>
